src/objects/loan__Repayment_Summary_Interface__c.object
<CustomObject>
    <fields>
        <fullName>loan__Data_Migration_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Migration Batch</label>
        <referenceTo>loan__Data_Migration_Batch__c</referenceTo>
        <relationshipLabel>Repayment Summary Interface</relationshipLabel>
        <relationshipName>Repayment_Summary_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Incoming_Loan_ID__c</fullName>
        <label>Incoming Loan ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_Account_No__c</fullName>
        <label>Loan Account No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Loan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan ID</label>
        <referenceTo>loan__Loan_Account__c</referenceTo>
        <relationshipLabel>Repayment Summary Interface</relationshipLabel>
        <relationshipName>Repayment_Summary_Interface</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>loan__Processing_Error__c</fullName>
        <label>Processing Error</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Contract_flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contractual</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__RSS_ID__c</fullName>
        <label>ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__RSS_No_Of_Pmts__c</fullName>
        <label>Number of Payments</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Primary_flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Repayment_Amt__c</fullName>
        <label>Repayment Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Repayment_Dt__c</fullName>
        <label>Repayment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__RSS_Seq__c</fullName>
        <label>Repayment Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__RSS_System_Generated_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>loan__Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Repayment Summary Interface</label>
    <nameField>
        <label>Repayment Summary Interface Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Repayment Summary Interface</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>